[package]
name = "obj2brs"
version = "0.1.3"
authors = ["Kmschr <Kmschr@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = ["reference.brs"]

[dependencies]
brickadia = "0.1.14"
tobj = "4.0"
brdb = "0.5"
cgmath = "0.18"
image = "0.24"
uuid = "1.0"
chrono = "0.4"
eframe = "0.33"
thiserror = "2.0"
dirs = "6.0"
rfd = "0.17"
rampifier = { git = "https://github.com/Wrapperup/rampifier", rev = "90b12aa0b4fae8e84cc3b295476300bcd28d7808" }

[features]
